Refining presentation of results for manuscript

--- a/notebook/2021-01-26-indiv-counts-modeling/2021-01-26-indiv-counts-modeling.ipynb
+++ b/notebook/2021-01-26-indiv-counts-modeling/2021-01-26-indiv-counts-modeling.ipynb
@@ -4394,8 +4394,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Exporting regression results"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fpath = '../../results/2021-01-26-indiv-counts-modeling/regression-results.csv'\n",
+    "regres = pd.concat([varsel.loc[:, [('poisson_scz', 'formula'), ('binomial_scz', 'formula')]].swaplevel(0, 1, axis=1),\n",
+    "           df.drop(['poisson', 'binomial'], axis=1, level=1)], axis=1)\n",
+    "regres = regres.rename({'poisson_scz': 'log-linear', 'binomial_scz': 'logistic'}, axis=1).fillna('failed to converge')\n",
+    "regres.to_csv(fpath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -4923,7 +4943,7 @@
        "Psychiatric GWAS            0.311700           1  0.456784            1  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4939,7 +4959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -5159,7 +5179,7 @@
        "Psychiatric GWAS             0.000771   0.456784  0.001175"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5181,7 +5201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -5401,7 +5421,7 @@
        "Psychiatric GWAS             0.000954        1.0  0.001069"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5424,7 +5444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -5449,7 +5469,7 @@
        "    <tr>\n",
        "      <th></th>\n",
        "      <th colspan=\"3\" halign=\"left\">chi^2</th>\n",
-       "      <th colspan=\"3\" halign=\"left\">binomial-logistic</th>\n",
+       "      <th colspan=\"3\" halign=\"left\">logistic</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
@@ -5528,7 +5548,7 @@
        "holm-sidak                                      []    []   \n",
        "bonferroni                                      []    []   \n",
        "\n",
-       "                                 binomial-logistic  \\\n",
+       "                                          logistic  \\\n",
        "                                             0.050   \n",
        "fdr_bh      [Schizophrenia GWAS, Psychiatric GWAS]   \n",
        "fdr_tsbh    [Schizophrenia GWAS, Psychiatric GWAS]   \n",
@@ -5545,7 +5565,7 @@
        "bonferroni                      [Psychiatric GWAS]    []  "
       ]
      },
-     "execution_count": 59,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5564,13 +5584,13 @@
     "\n",
     "alphas = [0.05, 0.025, 0.01]\n",
     "fdr_rejected = pd.concat([get_fdr_rejected(test) for test in ['chi^2', 'Dx[T.SCZ]']], axis=1)\n",
-    "fdr_rejected.columns = pd.MultiIndex.from_product([['chi^2', 'binomial-logistic'], alphas])\n",
+    "fdr_rejected.columns = pd.MultiIndex.from_product([['chi^2', 'logistic'], alphas])\n",
     "fdr_rejected"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5603,7 +5623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -5612,7 +5632,7 @@
        "['named-figure/enrichment-5-plots.png', 'named-figure/enrichment-5-plots.pdf']"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5722,7 +5742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -5740,7 +5760,7 @@
        " 'named-figure/enrichment-5-plots_scz.pdf']"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5764,7 +5784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -5773,7 +5793,7 @@
        "['named-figure/enrichment-chisq.png', 'named-figure/enrichment-chisq.pdf']"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5808,7 +5828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -5826,7 +5846,7 @@
        " 'named-figure/enrichment-chisq_scz.pdf']"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5850,7 +5870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -5860,7 +5880,7 @@
        " 'named-figure/enrichment-model-chisq.pdf']"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5896,7 +5916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -5914,7 +5934,7 @@
        " 'named-figure/enrichment-model-chisq_scz.pdf']"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5938,7 +5958,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -5948,7 +5968,7 @@
        " 'named-figure/age-effect-pois-binom.pdf']"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -5986,7 +6006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -5996,7 +6016,7 @@
        " 'named-figure/binom-four-resid-types.pdf']"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6020,7 +6040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -6030,7 +6050,7 @@
        " 'named-figure/binom-four-resid-types_scz.pdf']"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6061,7 +6081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -6070,7 +6090,7 @@
        "['named-figure/resid-pois.png', 'named-figure/resid-pois.pdf']"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6096,7 +6116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -6105,7 +6125,7 @@
        "['named-figure/resid-pois_scz.png', 'named-figure/resid-pois_scz.pdf']"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6129,7 +6149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -6138,7 +6158,7 @@
        "['named-figure/resid-binom.png', 'named-figure/resid-binom.pdf']"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6162,7 +6182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -6171,7 +6191,7 @@
        "['named-figure/resid-binom_scz.png', 'named-figure/resid-binom_scz.pdf']"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6195,7 +6215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -6205,7 +6225,7 @@
        " 'named-figure/scz_gwas_genes-poisson-partial-resid-plot_scz.pdf']"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -6233,7 +6253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -6241,13 +6261,13 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"shell_port\": 34709,\n",
-      "  \"iopub_port\": 41369,\n",
-      "  \"stdin_port\": 51637,\n",
-      "  \"control_port\": 55495,\n",
-      "  \"hb_port\": 49501,\n",
+      "  \"shell_port\": 42305,\n",
+      "  \"iopub_port\": 43317,\n",
+      "  \"stdin_port\": 46175,\n",
+      "  \"control_port\": 51015,\n",
+      "  \"hb_port\": 47307,\n",
       "  \"ip\": \"127.0.0.1\",\n",
-      "  \"key\": \"eae6726f-abc58570a4d5e10c262e1316\",\n",
+      "  \"key\": \"a25f3722-fbc3265ac383c95264e55c71\",\n",
       "  \"transport\": \"tcp\",\n",
       "  \"signature_scheme\": \"hmac-sha256\",\n",
       "  \"kernel_name\": \"\"\n",
@@ -6256,7 +6276,7 @@
       "Paste the above JSON into a file, and connect with:\n",
       "    $> jupyter <app> --existing <file>\n",
       "or, if you are local, you can connect with just:\n",
-      "    $> jupyter <app> --existing kernel-9b8c993a-0caa-4e9d-92a7-3455340eeb79.json\n",
+      "    $> jupyter <app> --existing kernel-c6fe3ed1-8ce9-4e00-b4be-79b69570fae2.json\n",
       "or even just:\n",
       "    $> jupyter <app> --existing\n",
       "if this is the most recent Jupyter kernel you have started.\n"
