--- a/presentations/bsm-ms/bsm-ms.tex
+++ b/presentations/bsm-ms/bsm-ms.tex
@@ -97,15 +97,14 @@ individuals.
 
 \subsection*{Somatic SNV callsets}
 
-We extracted NeuN+ nuclei from postmortem samples of the DLPFC of 40 control
+We extracted NeuN+ nuclei from postmortem DLPFC samples of 40 control
 and 61 schizophrenic individuals and subjected them to short read DNA
 sequencing at 50--540\(\times\) coverage.  Next we called somatic SNVs using a
 pipeline developed and validated by the BSMN consortium~\citep{Wang2021}.  The
 genome-wide somatic SNV call rate was similar for control and schizophrenic
-samples (median around 40) and showed great variability, ranging 0 to 100
-(Fig~\ref{fig:genomewide-calls}A) with the exception of an outlier
-schizophrenic sample reaching \(\approx 189\).  (TODO: investigate the outlier
-CMC_MSSM_224 further.)
+samples (median around 40) and showed great variability, ranging typically
+from 0 to 100
+(Fig~\ref{fig:genomewide-calls}A).
 
 \begin{figure}
 \includegraphics[scale=0.6]{../../notebook/2020-12-09-walsh-data/named-figure/genome-wide-callrate.pdf}
@@ -114,21 +113,27 @@ CMC_MSSM_224 further.)
 \label{fig:genomewide-calls}
 \end{figure}
 
-We sought biological or technical variables that explain that high variance of
+We sought biological and technical variables that explain that high variance of
 genome-wide.  As the bottom panel of Fig~\ref{fig:genomewide-calls} shows,
 sequencing read depth explains much of the variability in call rate, which
 indicates that the variant calling pipeline adapts to lower coverage by
 applying stronger filters in order to maintain high specificity.
+
+The highest genome-wide rate (189 somatic SNVs) was observed in a sample from
+a schizophrenic woman.  Considering that its sequencing depth is only moderate
+this sample is clearly an outlier and the reason is likely biological. TODO:
+case study of CMC\_MSSM\_224 using
+results/2020-09-07-annotations/annotated-calls.csv.
 
 Our pipeline provided us with an estimate of allele frequency for each somatic
 SNV.  This enabled us to qualitatively assess the simple model that somatic
 point mutation rate roughly constant along the cell lineages of our
 samples~\citep{Rodin2021} since under this model the density of allele
 frequency is quasi exponential.  We found this to be the case at high
-(\(\approx 400\) read depth (blue allele frequency density in Fig~\ref{fig:AF}
+(\(\approx 400\)) read depth (blue allele frequency density in Fig~\ref{fig:AF}
 right panel).  With decreasing read depth, however, the density of allele
 frequency is increasingly shifted towards higher frequencies (orange and green
-densities, Fig~\ref{fig:AF}) right).  These results indicate that the somatic
+densities, Fig~\ref{fig:AF} right panel).  These results indicate that the somatic
 SNVs we called follow the expected allele frequency distribution but our
 pipeline's sensitivity for low allele frequency (below c.a 0.05) is low at
 low-medium sequencing coverage.
@@ -143,7 +148,7 @@ of the pipeline.
 \label{fig:AF}
 \end{figure}
 
-\subsection*{Increased local rates of somatic SNVs in schizophrenia}
+\subsection*{Local rates of somatic SNVs in schizophrenia}
 
 Next we investigated weather the local rate of somatic SNVs falling into
 specific functional categories is altered in schizophrenia.  We
@@ -153,27 +158,28 @@ categories such as loss of function intolerant genes; and gene sets affected
 by rare and common variants in schizophrenia and related psychiatric
 disorders (Table~\ref{tab:modsel}).
 
-For each SNV category we formally tested weather the local rate of somatic SNVs is
+For each SNV category we tested weather the local rate of somatic SNVs is
 affected by disease status.  For that purpose we employed one univariate test
 ($\chi^2$) and two multivariate regression models---logistic and log-linear
 regression, Fig.~S\ref{fig:fitted-lines} ---, which we combined with a forward
 variable selection algorithm (Fig.~S\ref{fig:varsel}) on a set of biological
-and technical explanatory variables.  These three techniques
+and technical explanatory variables (Fig.~S\ref{fig:scattermatrix}).  These three techniques
 lead to highly concordant inferences (compare p-values between the two
 rightmost panels in Fig.~\ref{fig:testresults} and compare
-Fig.~S\ref{fig:varsel}A vs.~B) suggesting that confounding variables or false
+Fig.~S\ref{fig:varsel}A to~S\ref{fig:varsel}B) suggesting that confounding variables or false
 modeling assumptions did not undermine our analyses.
 
 Three categories of somatic SNVs displayed significantly increased local rate
-in schizophrenia samples after multipe test correction: Schizophrenia GWAS,
-Psychiatric GWAS (both at false discovery rate, FDR, below $\alpha=0.025$) and
-ASD GWAS (FDR below $\alpha=0.05$), see Fig.~\ref{fig:testresults}, 
-supporting-data-file1.csv and supporting-data-file2.csv.  For four additional categories the forward algorithm selected the
-disease status, Dx, variable (Table~\ref{tab:modsel}) and the local rate was
-nonsignificantly increased (Fig.~\ref{fig:testresults}) in schizophrenic
-samples; these are: Bipolar disorder GWAS, Calcium channel genes, loss of
-function (LoF) intolerant genes and evolutionary conserved regions detected by
-GERP++.
+in schizophrenia samples after multiple test correction: Schizophrenia GWAS,
+Psychiatric GWAS (both at false discovery rate, FDR, below $\alpha=0.025$ for
+the $\chi^2$ and the logistic model based test) and ASD GWAS (FDR below
+$\alpha=0.025$ for the $\chi^2$ test), see Fig.~\ref{fig:testresults},
+supporting-data-file1.csv and supporting-data-file2.csv.  For four additional
+categories the forward algorithm selected the disease status, Dx, variable
+(Table~\ref{tab:modsel}) but the local rate was only nonsignificantly increased
+(Fig.~\ref{fig:testresults}) in schizophrenic samples. These categories are: Bipolar
+disorder GWAS, Calcium channel genes, loss of function (LoF) intolerant genes
+and evolutionary conserved regions detected by GERP++.
 
 For the remaining categories in Table~\ref{tab:modsel} no change in local rate
 was detected in schizophrenic samples relative to controls.  The
@@ -250,7 +256,9 @@ GWAS gene set & ADHD GWAS & 1 + AF + DP & 5\\
  & Psychiatric GWAS & 1 + Dx & 176\\
 \end{tabular}
 \caption{
-TODO
+	Studied categories of SNVs, variables explaining local rate of somatic
+	SNVs (selected model formula) and the number of SNVs called (the size
+	of the category).
 }
 \label{tab:modsel}
 \end{table}
@@ -284,7 +292,15 @@ The comparison of GWAS genes to GWAS loci suggests that not only
 exonic but also intronic somatic SNVs can contribute to the risk of
 schizophrenia.
 
-Questions we cannot answer:
+Questions
+\begin{itemize}
+	\item Inverse relationship of somatic and germline variants?  Our data
+		are probably insufficient
+	\item somatic CNVs
+	\item how much more insights to schizophrenia pathomechanism can we
+		gain from further study of somatic variants?  Single cell
+		sequencing, increased sample size,...
+\end{itemize}
 
 \section*{Methods}
 
